cmake_minimum_required(VERSION 3.21)
project(PisiKaki)

set(CMAKE_CXX_STANDARD 20)

add_executable(PisiKaki main.cpp cmake-build-debug/Smech.cpp cmake-build-debug/Lol.cpp cmake-build-debug/HelloThere.cpp Chmon.h cmake-build-debug/Steel.cpp cmake-build-debug/Ball.cpp cmake-build-debug/Run.cpp cmake-build-debug/Suka.cpp cmake-build-debug/Jopa.cpp)
